[package]
name = "modtide"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = "s"

[lib]
name = "dwmapi"
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.62"
features = [
    "Win32",
    "Win32_Security",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_UI",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Imaging",
    "Graphics",
    "Win32_System_Memory",
]
